[tool.poetry]
name = "essence-of-machine-learning"
version = "0.1.0"
description = ""
authors = ["Shunya Ueta <hurutoriya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
mypy = "^0.961"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
